--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Examen_Dias">
         <activity
-            android:name=".Act28"
+            android:name=".Act27"
             android:exported="false" />
         <activity
-            android:name=".Act29"
+            android:name=".Act25"
             android:exported="false" />
         <activity
-            android:name=".Act26"
+            android:name=".Act24"
             android:exported="false" />
         <activity
-            android:name=".Act23"
-            android:exported="false" />
-        <activity
-            android:name=".Adaptador"
-            android:exported="false" />
-        <activity
-            android:name=".Act21"
-            android:exported="false" />
-        <activity
-            android:name=".Act20"
+            android:name=".Act22"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -41,6 +31,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Act20" />
+        <activity android:name=".Act21" />
+        <activity android:name=".Act23" />
+        <activity android:name=".Act26" />
+        <activity android:name=".Act28" />
+        <activity android:name=".Act29" />
     </application>
 
 </manifest>
